<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_isaac_simulation</name>
  <version>0.0.0</version>
  <description>UR5 Isaac Sim ROS2 Humble simulation Package</description>
  <maintainer email="engcaiobarros@gmail.com">Caio Viturino</maintainer>
  <license>BSD-2.0</license>

  <depend>geometry_msgs</depend>
  
  <exec_depend>control_msgs</exec_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
